--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -17,15 +18,17 @@ ul {
     display: flex;
     flex-direction: row;
     list-style: none;
-    background-color: rgb(116, 116, 126);
+    background-color: rgb(157, 108, 68);
     font-size: 25px;
     justify-content: center; 
-
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 
 li {
-    background-color: bisque;
     padding: 1%;
+    color: aliceblue;
 }
 
 /* the whole content */ 
@@ -34,7 +37,7 @@ li {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     background-image: url(./utils/pexels-hasan-albari-1229861.jpg);
     height: 100vh;
     background-size: cover;
@@ -45,10 +48,15 @@ li {
 .welcome-section {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
+    font-size: 30px;
+    align-content: flex-start;
+    padding-left: 10%;
+    max-width: 40%;
+    padding-right: 10%;
 }
 
 .welcome-section > * {
-    margin-top: 2%;
+    margin-top: 5%;
 color: aliceblue;}
