--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,75 @@
 * {
-    margin: 0;
-    padding: 0;
-font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-content: center;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
 }
 
 /* navBar */
 
 ul {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    background-color: rgb(157, 108, 68);
-    font-size: 25px;
-    justify-content: center; 
-    position: fixed;
-    top: 0;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  background-color: rgb(157, 108, 68);
+  font-size: 25px;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 li {
-    padding: 1%;
-    color: aliceblue;
+  padding: 1%;
+  color: aliceblue;
 }
 
 a {
-    text-decoration: none;
-    color: aliceblue;
+  text-decoration: none;
+  color: aliceblue;
 }
 
-/* the whole content */ 
+/* the whole content */
 
 .content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    background-image: url(./utils/pexels-hasan-albari-1229861.jpg);
-    height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  background-image: url(./utils/pexels-hasan-albari-1229861.jpg);
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 100%;
 }
 
 .welcome-section {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    font-size: 30px;
-    align-content: flex-start;
-    padding-left: 10%;
-    max-width: 40%;
-    padding-right: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  font-size: 30px;
+  align-content: flex-start;
+  padding-left: 10%;
+  max-width: 40%;
+  padding-right: 10%;
 }
 
 .welcome-section > * {
-    margin-top: 5%;
-color: aliceblue;}
+  margin-top: 5%;
+  color: aliceblue;
+}
 
 .title {
-    font-size: 8vh;
-    color: rgb(157, 108, 68);
+  font-size: 8vh;
+  color: rgb(157, 108, 68);
 }
 
 .subTitle {
