--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 * {
   margin: 0;
   padding: 0;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -18,7 +22,6 @@ ul {
   display: flex;
   flex-direction: row;
   list-style: none;
-  background-color: rgb(157, 108, 68);
   font-size: 25px;
   justify-content: center;
   position: fixed;
@@ -28,12 +31,12 @@ ul {
 
 li {
   padding: 1%;
-  color: aliceblue;
+  color: #172B4D;
 }
 
 a {
   text-decoration: none;
-  color: aliceblue;
+  color: #172B4D;
 }
 
 /* the whole content */
@@ -43,11 +46,12 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-image: url(./utils/pexels-hasan-albari-1229861.jpg);
+  background-image: url(./utils/Header-llustration-desktop@2x.png);
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 100%;
+  background-position: 80%;
+  background-size: 1900px 1000px;
 }
 
 .welcome-section {
@@ -58,7 +62,7 @@ a {
   font-size: 30px;
   align-content: flex-start;
   padding-left: 10%;
-  max-width: 40%;
+  max-width: 100%;
   padding-right: 10%;
 }
 
@@ -69,11 +73,13 @@ a {
 
 .title {
   font-size: 8vh;
-  color: rgb(157, 108, 68);
+  color: #172B4D;
 }
 
 .subTitle {
+  color: #36B37E;
 }
 
 .bio {
+  color: #172B4D;
 }
