--- a/styles.css
+++ b/styles.css
@@ -48,10 +48,15 @@ a {
   align-items: flex-start;
   background-image: url(./utils/Header-llustration-desktop@2x.png);
   height: 100vh;
-  background-size: cover;
+  width: 100%;
+  height: 100vh;
   background-repeat: no-repeat;
-  background-position: 80%;
-  background-size: 1900px 1000px;
+  background-position: center center;
+  background-size: 1970px 1100px;
+  background-attachment: fixed;
+  background-position-y: top;
+
+
 }
 
 .welcome-section {
