--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,8 @@ ul {
   display: flex;
   flex-direction: row;
   list-style: none;
-  font-size: 25px;
+  /* font-size: 25px; */
+  font-weight:500;
   justify-content: center;
   position: fixed;
   top: 0;
@@ -44,12 +45,11 @@ a {
 .content {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-start;
+  align-items: center;
   background-image: url(./utils/Header-llustration-desktop@2x.png);
   height: 100vh;
   width: 100%;
-  height: 100vh;
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 1970px 1100px;
@@ -62,22 +62,23 @@ a {
 .welcome-section {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   font-size: 30px;
-  align-content: flex-start;
   padding-left: 10%;
-  max-width: 100%;
+  max-width: 90%;
   padding-right: 10%;
+  padding-top: 15%;
 }
 
 .welcome-section > * {
-  margin-top: 5%;
+  margin-top: 2%;
   color: aliceblue;
+  align-self: center;
 }
 
 .title {
-  font-size: 8vh;
+  font-size: 60px;
   color: #172B4D;
 }
 
@@ -87,4 +88,8 @@ a {
 
 .bio {
   color: #172B4D;
+  font-weight: 200;
+  max-width: 70%;
+  text-align: center;
+
 }
