--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@
 .header {
   display: flex;
   flex-direction: row;
+  padding-top: 13px;
+  justify-content: center;
 }
 
 .logo {
@@ -33,6 +35,8 @@
   align-items: center;
   text-align: center;
   color: #28352f;
+  border: 1px solid blue;
+
 }
 
 ul {
@@ -41,12 +45,19 @@ ul {
   list-style: none;
   font-weight: 500;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  border: 1px solid red;
+  max-width: fit-content;
 }
 
 li {
-  padding: 1%;
+  padding: 0% 6% 0% 6%;
   color: #172b4d;
+  font-family: "Inter";
+  font-size: 15px;
+  font-weight: 600;
+  top: 500em;
 }
 
 a {
@@ -78,10 +89,13 @@ a {
 .title {
   padding-top: 100px;
   color: #172b4d;
+  text-align: center;
 }
 
 .subTitle {
   color: #36b37e;
+  text-align: center;
+
 }
 
 .bio {
@@ -94,6 +108,7 @@ a {
   margin-top: 20px;
   text-align: center;
   color: #172b4d;
+
 }
 
 .socials {
@@ -114,6 +129,9 @@ a {
 }
 
 @media (max-width: 710px) {
+  .header{
+    justify-content: space-between;
+  }
   .nav-item {
     display: none;
   }
@@ -142,8 +160,9 @@ a {
   }
 
   .bio {
-    text-align: start;
+    text-align: center;
     max-width: 100%;
+    padding-top: 15px;
   }
 }
 
