--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,23 @@
   justify-content: center;
   align-content: center;
 }
+body {
+  background-image: url(./utils/Header-llustration-desktop@2x.png);
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
 
+.background {
+
+  position: absolute;
+width: 1472.8px;
+height: 1434.3px;
+left: 27px;
+top: -398px;
+
+}
 /* header */
 
 .header {
@@ -35,7 +51,6 @@
   align-items: center;
   text-align: center;
   color: #28352f;
-  border: 1px solid blue;
 
 }
 
@@ -47,7 +62,6 @@ ul {
   justify-content: center;
   align-items: center;
   width: 100%;
-  border: 1px solid red;
   max-width: fit-content;
 }
 
@@ -76,14 +90,8 @@ a {
   padding-left: 10%;
   max-width: 90%;
   padding-right: 10%;
-  background-image: url(./utils/Header-llustration-desktop@2x.png);
-  height: 100vh;
-  width: 80%;
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: 1970px 1100px;
-  background-attachment: fixed;
-  background-position-y: top;
+  margin-top: 91px;
+  
 }
 
 .title {
@@ -129,6 +137,14 @@ a {
 }
 
 @media (max-width: 710px) {
+  body {
+    background-image: url(./utils/header-illsutration-mobile@2x.png);
+    height: 100vh;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
   .header{
     justify-content: space-between;
   }
