--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,14 @@
   align-content: center;
 }
 
-body {
+
+.bg {
   background-image: url(./utils/Header-llustration-desktop@2x.png);
-  background-size: cover;
-  height: 100vh;
+  background-size: 100% 100%;
+  height: 110vh;
   background-repeat: no-repeat;
   background-position: center;
-  background-position-y: -61px;
-}
-
-.background {
-  position: absolute;
-  width: 1472.8px;
-  height: 1434.3px;
-  left: 27px;
-  top: -398px;
+  background-position-y: -59px;
 }
 
 /* header */
@@ -88,7 +81,8 @@ a {
   padding-left: 10%;
   max-width: 90%;
   padding-right: 10%;
-  margin-top: 91px;
+  padding-top: 3%;
+
 }
 
 .title {
@@ -131,12 +125,12 @@ a {
 }
 
 @media (max-width: 710px) {
-  body {
+  
+  .bg {
     background-image: url(./utils/header-illsutration-mobile@2x.png);
-    height: 100vh;
     background-size: contain;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position-y: 58px;
   }
 
   .header {
