--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@
   color: #28352f;
 }
 
-ul {
+.nav-list {
   display: flex;
   flex-direction: row;
   list-style: none;
@@ -155,7 +155,7 @@ a {
 
 .cardTop {
   flex: 1;
-  background-color: #d0d9d4;
+  background-color: #EBF0EE;
   border-radius: 8px 8px 0 0;
 }
 
@@ -166,10 +166,44 @@ a {
   border-radius: 10px 10px 10px 10px;
   background-color: white;
   align-self: center;
-align-items: center;}
+  align-items: center;
+  max-height: 222px;
+}
+
+.cardTitle {
+  max-width: 70%;
+  margin: 16px;
+  color: #172b4d;
+}
+
+.techs {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  font-weight: 600;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%;
+}
 
 .tech {
-  background-color: grey;
+  background-color: #EBF0EE;
+  font-weight: 600;
+  font-size: 12px;
+  padding: 8px 12px 8px 12px;
+  color: #172b4d;
+  border-radius: 8px;
+}
+
+.btn {
+  padding: 12px;
+  background-color: #36B37F;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  margin-top: 29px;
+  font-size: 17px;
+  font-weight: 500;
 }
 
 @media (max-width: 710px) {
