--- a/styles.css
+++ b/styles.css
@@ -164,10 +164,11 @@ a {
   display: flex;
   flex-direction: column;
   border-radius: 10px 10px 10px 10px;
-  background-color: white;
+  background-color:none;
   align-self: center;
   align-items: center;
   max-height: 222px;
+  border-radius: 8px;
 }
 
 .cardTitle {
@@ -203,7 +204,13 @@ a {
   border-radius: 4px;
   margin-top: 29px;
   font-size: 17px;
-  font-weight: 500;
+  font-weight: 400;
+}
+
+.btn:hover {
+  background: #18764f;
+  box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
+  cursor: pointer;
 }
 
 @media (max-width: 710px) {
