--- a/styles.css
+++ b/styles.css
@@ -23,8 +23,6 @@
   background-position-x: 37px;
 }
 
-
-
 .aboutbg1 {
   position: absolute;
   right: -10px;
@@ -32,7 +30,7 @@
 
 .aboutbg2 {
   position: absolute;
-  left:-10px;
+  left: -10px;
   bottom: -1610px;
 }
 
@@ -43,8 +41,6 @@
 .aboutbg2mobile {
   display: none;
 }
-
-
 
 /* header */
 
@@ -153,7 +149,7 @@ a {
   grid-column: 1/4;
   font-size: 40px;
   font-weight: 700;
-  color: #172B4D;
+  color: #172b4d;
   margin-bottom: 20px;
 }
 .section-container {
@@ -177,13 +173,13 @@ a {
   flex-direction: column;
   height: 474px;
   width: 369px;
-  border: 1px solid #EBF0EE;
+  border: 1px solid #ebf0ee;
   border-radius: 8px;
 }
 
 .cardTop {
   flex: 1;
-  background-color: #EBF0EE;
+  background-color: #ebf0ee;
   border-radius: 8px 8px 0 0;
 }
 
@@ -192,7 +188,7 @@ a {
   display: flex;
   flex-direction: column;
   border-radius: 10px 10px 10px 10px;
-  background-color:none;
+  background-color: none;
   align-self: center;
   align-items: center;
   max-height: 222px;
@@ -209,7 +205,6 @@ a {
 
 .border {
   grid-column: 2/4;
-  
 }
 
 .techs {
@@ -223,7 +218,7 @@ a {
 }
 
 .tech {
-  background-color: #EBF0EE;
+  background-color: #ebf0ee;
   font-weight: 600;
   font-size: 12px;
   padding: 8px 12px 8px 12px;
@@ -233,7 +228,7 @@ a {
 
 .btn {
   padding: 12px;
-  background-color: #36B37F;
+  background-color: #36b37f;
   color: white;
   border: none;
   border-radius: 4px;
@@ -248,29 +243,26 @@ a {
   cursor: pointer;
 }
 
-
-/* About ME Section */ 
+/* About ME Section */
 
 .aboutHeader {
   grid-column: 1/4;
   margin-top: 150px;
   margin-bottom: 30px;
-  
 }
 .bioAboutme {
   grid-column: 1/4;
-    max-width: 803px;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 32px;
-    color: #42526E;
-  
+  max-width: 803px;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  color: #42526e;
 }
 
 .resumeBtn {
   grid-column: 1/4;
   padding: 12px;
-  background-color: #36B37F;
+  background-color: #36b37f;
   color: white;
   border: none;
   border-radius: 4px;
@@ -289,8 +281,8 @@ a {
   display: flex;
   height: 352px;
   width: 369px;
-  border: 1px solid #C1C7D0;
-  background-color: #EBF0EE;
+  border: 1px solid #c1c7d0;
+  background-color: #ebf0ee;
   flex-direction: column;
   border-radius: 8px;
   align-self: center;
@@ -303,8 +295,9 @@ a {
   font-weight: 600;
   font-size: 24px;
   margin: 7px;
-  margin-top: 34px ;
+  margin-top: 34px;
 }
+
 .list {
   display: flex;
   flex-direction: row;
@@ -322,15 +315,12 @@ a {
   font-weight: 600;
   font-size: 12px;
   padding: 12px;
-  color: #36B37E;
+  color: #36b37e;
   border-radius: 8px;
   margin: 7px;
 }
 
-
-
-
-/* mobile view */ 
+/* mobile view */
 
 @media (max-width: 710px) {
   .bg {
@@ -345,7 +335,7 @@ a {
   .aboutbg1 {
     display: none;
   }
-  
+
   .aboutbg2 {
     display: none;
   }
@@ -355,7 +345,7 @@ a {
     position: absolute;
     right: -10px;
   }
-  
+
   .aboutbg2mobile {
     display: block;
     position: absolute;
@@ -399,19 +389,19 @@ a {
     margin-top: 50px;
   }
 
-
-  /* Sections section in mob view */ 
+  /* Sections section in mob view */
   .sectionTitle {
     max-width: 70%;
   }
 
   .border {
     width: 48px;
-  height: 4px;
-  background-color: #36B37E;
-  border-radius: 24px;
-  align-self: center;
+    height: 4px;
+    background-color: #36b37e;
+    border-radius: 24px;
+    align-self: center;
   }
+  
   .section-container {
     display: flex;
     flex-direction: column;
@@ -422,15 +412,14 @@ a {
   }
 
   .projectCard {
-    max-width: 88%
+    max-width: 88%;
   }
 
-  /* about section on mobile */ 
+  /* about section on mobile */
 
   .aboutHeader {
     margin-top: 40px;
     max-width: 88%;
-
   }
 
   .aboutHeader > .sectionTitle {
@@ -438,13 +427,9 @@ a {
   }
 
   .technologyCard {
-    max-width: 88%
-
+    max-width: 88%;
   }
-
 }
-
-
 
 @media (min-width: 710px) {
   .fa-bars {
