--- a/styles.css
+++ b/styles.css
@@ -144,7 +144,7 @@ a {
 
 /* Works-Section */
 
-/*this is the grid container */
+/* this is the grid container */
 .sectionTitle {
   grid-column: 1/4;
   font-size: 40px;
@@ -152,6 +152,7 @@ a {
   color: #172b4d;
   margin-bottom: 20px;
 }
+
 .section-container {
   display: grid;
   grid-template-columns: auto auto auto;
@@ -166,7 +167,7 @@ a {
   background-color: white;
 }
 
-/*project card */
+/* project card */
 
 .projectCard {
   display: flex;
@@ -187,7 +188,6 @@ a {
   flex: 1;
   display: flex;
   flex-direction: column;
-  border-radius: 10px 10px 10px 10px;
   background-color: none;
   align-self: center;
   align-items: center;
@@ -238,7 +238,7 @@ a {
 }
 
 .btn:hover {
-  background: #18764f;
+  background-color: #18764f;
   box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
   cursor: pointer;
 }
@@ -250,6 +250,7 @@ a {
   margin-top: 150px;
   margin-bottom: 30px;
 }
+
 .bioAboutme {
   grid-column: 1/4;
   max-width: 803px;
@@ -272,7 +273,7 @@ a {
 }
 
 .resumeBtn:hover {
-  background: #18764f;
+  background-color: #18764f;
   box-shadow: 0px 8px 16px rgba(54, 179, 127, 0.24);
   cursor: pointer;
 }
@@ -328,7 +329,7 @@ a {
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: 58px;
-    background-position-x: 0px;
+    background-position-x: 1px;
     height: 100vh;
   }
 
@@ -401,7 +402,6 @@ a {
     border-radius: 24px;
     align-self: center;
   }
-  
   .section-container {
     display: flex;
     flex-direction: column;
