--- a/styles.css
+++ b/styles.css
@@ -430,6 +430,28 @@ a {
   .technologyCard {
     max-width: 88%;
   }
+
+
+  /* contact section on mobile */ 
+
+  .contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .contact-container > ul li {
+    list-style: none;
+  }
+
+  .full-name, .email {
+    height: 48px;
+    width: 327px;
+    border-radius: 4px;
+    border: 1px solid #D0D9D4;;
+  }
 }
 
 @media (min-width: 710px) {
