--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,8 @@ a {
 /* About ME Section */
 
 .aboutme-section {
-  background-image: url(./utils/icons/aboutme1desktop.svg),
+  background-image:
+    url(./utils/icons/aboutme1desktop.svg),
     url(./utils/icons/aboutme2desktop.svg);
   background-repeat: no-repeat no-repeat;
   background-position: right bottom, left top;
@@ -342,7 +343,8 @@ a {
   }
 
   .aboutme-section {
-    background-image: url(./utils/icons/aboutmemobile1.svg),
+    background-image:
+      url(./utils/icons/aboutmemobile1.svg),
       url(./utils/icons/aboutme2mobile.svg);
     background-repeat: no-repeat no-repeat;
     background-position: right bottom, left top;
@@ -448,6 +450,10 @@ a {
     gap: 58px;
   }
 
+  .fields li {
+    padding: 0;
+  }
+
   .fields {
     display: flex;
     flex-direction: column;
@@ -489,10 +495,6 @@ a {
     max-width: 100%;
   }
 
-  .fields li {
-    padding: 0;
-  }
-
   .links {
     display: flex;
     flex-direction: column;
@@ -509,7 +511,7 @@ a {
     padding-bottom: 50px;
     font-weight: 400;
     font-size: 20px;
-    color: #42526E;
+    color: #42526e;
   }
 }
 
