Add transition effect

--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,10 @@ a {
   justify-content: center;
   margin-bottom: 50px;
   justify-items: center;
+  
+
 }
+
 
 .section-container > * {
   background-color: white;
@@ -163,12 +166,24 @@ a {
   width: 369px;
   border: 1px solid #ebf0ee;
   border-radius: 8px;
+  transition: width, border-radius .3s;
+  width: 100%;
+}
+
+.projectCard:hover {
+  width: 105%;
+  border-radius: 20px;
 }
 
 .cardTop {
   flex: 1;
   background-color: #ebf0ee;
   border-radius: 8px 8px 0 0;
+  transition: border-radious .3s;
+}
+
+.cardTop:hover {
+  border-radius: 20px;
 }
 
 .cardBottom {
@@ -222,6 +237,7 @@ a {
   margin-top: 29px;
   font-size: 17px;
   font-weight: 400;
+  transition: all .2s;
 }
 
 .btn:hover {
