--- a/styles.css
+++ b/styles.css
@@ -70,6 +70,10 @@ html {
   max-width: fit-content;
 }
 
+.nav-mobile {
+  display: none;
+}
+
 li {
   padding: 0% 6% 0% 6%;
   color: #172b4d;
@@ -384,6 +388,10 @@ mobile view
     color: #3a4a42;
   }
 
+  .nav-decktop {
+    display: none;
+  }
+
   .nav-list {
     display: none;
     flex-direction: column;
@@ -572,11 +580,6 @@ mobile view
   .fa-close {
     display: none;
   }
-
-
- .nav-list {
-  display: block;
- }
 
   /* contact section on desktop
   ------------------------------ */
