--- a/styles.css
+++ b/styles.css
@@ -271,8 +271,7 @@ div.anime {
 ------------------------------------------------------------------------------ */
 
 .aboutme-section {
-  background-image:
-    url(./utils/icons/aboutme1desktop.svg),
+  background-image: url(./utils/icons/aboutme1desktop.svg),
     url(./utils/icons/aboutme2desktop.svg);
   background-repeat: no-repeat no-repeat;
   background-position: right bottom, left top;
@@ -370,8 +369,7 @@ mobile view
   }
 
   .aboutme-section {
-    background-image:
-      url(./utils/icons/aboutmemobile1.svg),
+    background-image: url(./utils/icons/aboutmemobile1.svg),
       url(./utils/icons/aboutme2mobile.svg);
     background-repeat: no-repeat no-repeat;
     background-position: right bottom, left top;
@@ -591,9 +589,7 @@ mobile view
     align-items: center;
     padding-top: 140px;
     padding-bottom: 209px;
-    background-image:
-      url(./utils/contact\ 3.svg),
-      url(./utils/contact\ 2.svg),
+    background-image: url(./utils/contact\ 3.svg), url(./utils/contact\ 2.svg),
       url(./utils/contact\ 1.svg);
     background-repeat: no-repeat;
     background-position: right, 261px, left;
@@ -685,4 +681,112 @@ mobile view
   .myemail {
     display: none;
   }
+}
+
+/* details popup */
+
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 55px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.popup-details {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 15px;
+  border: 1px solid #888;
+  width: 47%;
+  border-radius: 8px;
+  animation-name: animitop;
+  animation-duration: 0.6s;
+  max-height: calc(100vh - 118px);
+  overflow-y: auto;
+}
+
+@keyframes animitop {
+  from {
+    top: -300px;
+    opacity: 0;
+  }
+  to {
+    top: 0;
+    opacity: 1;
+  }
+}
+
+.popup-details .close {
+  align-self: flex-end;
+  text-align: center;
+  background-color: #EBECF0;
+  padding: 12px;
+  border-radius: 8px;
+  padding-left: 15px;
+  padding-right: 15px;
+  cursor: pointer;
+  transform: 0.3s;
+}
+
+.popup-details::-webkit-scrollbar {
+  display: none;
+}
+
+.popup-details .close:hover {
+  background-color: #c1c6d9;
+
+}
+
+.popup-details img {
+  width: 100%;
+}
+
+.title-btns .popup-title {
+  flex: 1;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+}
+
+.title-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.project-btns .btn {
+  margin-top: 0;
+}
+
+.project-btns .fa {
+  margin: 0;
+  padding: 0;
+  font-size: 21px;
+  padding-left: 11px;
+  color: white;
+}
+
+.techs-used {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 8px;
+}
+
+.details-para {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
 }
