--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html {
 }
 
 .bg {
-  background-image: url(./utils/welcome\ bg.svg);
+  background-image: url(./utils/images/welcome\ bg.svg);
   background-size: 98% 100%;
   height: 107vh;
   background-repeat: no-repeat;
@@ -271,8 +271,8 @@ div.anime {
 ------------------------------------------------------------------------------ */
 
 .aboutme-section {
-  background-image: url(./utils/icons/aboutme1desktop.svg),
-    url(./utils/icons/aboutme2desktop.svg);
+  background-image: url(./utils/images/aboutme1desktop.svg),
+    url(./utils/images/aboutme2desktop.svg);
   background-repeat: no-repeat no-repeat;
   background-position: right bottom, left top;
   background-position-y: 53px, 215px;
@@ -360,7 +360,7 @@ mobile view
 -------------------------------------------------- */
 @media (max-width: 600px) {
   .bg {
-    background-image: url(./utils/header-illsutration-mobile@2x.png);
+    background-image: url(./utils/images/header-illsutration-mobile@2x.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position-y: 58px;
@@ -369,8 +369,8 @@ mobile view
   }
 
   .aboutme-section {
-    background-image: url(./utils/icons/aboutmemobile1.svg),
-      url(./utils/icons/aboutme2mobile.svg);
+    background-image: url(./utils/images/aboutmemobile1.svg),
+      url(./utils/images/aboutme2mobile.svg);
     background-repeat: no-repeat no-repeat;
     background-position: right bottom, left top;
     background-position-y: -21px, 326px;
@@ -489,7 +489,7 @@ mobile view
   .contact-section {
     padding: 24px;
     padding-bottom: 75px;
-    background-image: url(./utils/illustration-contact-form.svg);
+    background-image: url(./utils/images/illustration-contact-form.svg);
     background-repeat: no-repeat;
     background-position-x: 334px;
     background-position-y: 706px;
@@ -589,8 +589,8 @@ mobile view
     align-items: center;
     padding-top: 140px;
     padding-bottom: 209px;
-    background-image: url(./utils/contact\ 3.svg), url(./utils/contact\ 2.svg),
-      url(./utils/contact\ 1.svg);
+    background-image: url(./utils/images/contact\ 3.svg), url(./utils/images/contact\ 2.svg),
+      url(./utils/images/contact\ 1.svg);
     background-repeat: no-repeat;
     background-position: right, 261px, left;
     background-position-y: 180px, 444px, 311px;
