--- a/styles.css
+++ b/styles.css
@@ -217,7 +217,6 @@ div.anime {
   max-height: 222px;
   border-radius: 8px;
   width: 100%;
-
 }
 
 .cardTitle {
@@ -273,7 +272,8 @@ div.anime {
 ------------------------------------------------------------------------------ */
 
 .aboutme-section {
-  background-image: url(./utils/images/aboutme1desktop.svg),
+  background-image:
+    url(./utils/images/aboutme1desktop.svg),
     url(./utils/images/aboutme2desktop.svg);
   background-repeat: no-repeat no-repeat;
   background-position: right bottom, left top;
@@ -371,7 +371,8 @@ mobile view
   }
 
   .aboutme-section {
-    background-image: url(./utils/images/aboutmemobile1.svg),
+    background-image: 
+      url(./utils/images/aboutmemobile1.svg),
       url(./utils/images/aboutme2mobile.svg);
     background-repeat: no-repeat no-repeat;
     background-position: right bottom, left top;
@@ -594,7 +595,7 @@ mobile view
   .project-btns-forMob .btn {
     margin-top: 0px;
     width: inherit;
-    padding: 12px 0;
+    padding: 12px 0px;
   }
 
   .project-btns-forMob .fa {
@@ -610,7 +611,6 @@ mobile view
     font-weight: 700;
     background: none;
   }
-
 }
 
 @media (min-width: 600px) {
@@ -631,7 +631,7 @@ mobile view
   }
 
   .popup-details .close {
-    background-color: #EBECF0;
+    background-color: #ebecf0;
   }
 
   /* contact section on desktop
@@ -644,7 +644,9 @@ mobile view
     align-items: center;
     padding-top: 140px;
     padding-bottom: 209px;
-    background-image: url(./utils/images/contact\ 3.svg), url(./utils/images/contact\ 2.svg),
+    background-image: 
+      url(./utils/images/contact\ 3.svg),
+      url(./utils/images/contact\ 2.svg),
       url(./utils/images/contact\ 1.svg);
     background-repeat: no-repeat;
     background-position: right, 261px, left;
@@ -774,6 +776,7 @@ mobile view
     top: -300px;
     opacity: 0;
   }
+
   to {
     top: 0;
     opacity: 1;
@@ -796,7 +799,6 @@ mobile view
 
 .popup-details .close:hover {
   background-color: #c1c6d9;
-
 }
 
 .popup-details img {
